--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -89,9 +89,11 @@ Användarnamn och lösenord får du av din verksamhetschef.
                 />
                 <br />
 
-                {% for message in messages %}
-                    <p id="messages">{{message}}</p>
-                {% endfor %}
+                {% if messages %} 
+                    {% for message in messages %}
+                          <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+                    {% endfor %} 
+                {% endif %}
 
                 <input
                   class="btn btn-info btn-md"
