--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -89,10 +89,12 @@ Användarnamn och lösenord får du av din verksamhetschef.
                 />
                 <br />
 
-                {% if messages %} 
+                {% if messages %}
+                <ul class="messages">
                     {% for message in messages %}
-                          <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-                    {% endfor %} 
+                    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
                 {% endif %}
 
                 <input
