--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -89,9 +89,7 @@ Användarnamn och lösenord får du av din verksamhetschef.
                 />
                 <br />
 
-                {% for message in messages %}
-                  <p id="messages">{{message}}</p>
-                {% endfor %}
+                {{form.errors}}
 
                 <input
                   class="btn btn-info btn-md"
