--- a/portalen/templates/portalen/header.html
+++ b/portalen/templates/portalen/header.html
@@ -2,34 +2,44 @@
 
 <style>
   .navbar {
-    background: darkred;
-    color: white;
-    border: 3px solid black;
-    height: 100px;
+    /* bg */
+
+    position: absolute;
     width: 100%;
-    flex-wrap: unset;
+    height: 80px;
+    left: 0px;
+
+    background: #ffffff;
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.05);
   }
 
-  .center {
-    position: relative;
-    font-family: serif;
-    margin: 35%;
-    top: 0%;
-  }
+  .container {
+    /* Rectangle 3 */
 
-  .btn.btn-primary {
-    width: 100px;
-    background: white;
-    color: black;
-    border: 3px solid black;
+    background: url("/static/images/logo.png");
+    background-size: 100% auto;
+    position: absolute;
+    width: 122.67px;
+    height: 129.29px;
+    left: 359px;
+  }
+  .title {
+    /* Casatorportalen */
+
+    position: absolute;
+    width: 119.02px;
+    height: 19.38px;
+    left: 556.58px;
+    top: 27.91px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 18px;
+    color: #121212;
   }
 </style>
 
-<nav class="navbar navbar-expand-lg">
-  <a class="btn btn-primary" href="{% url 'logout' %}" type="button"
-    >Logga ut</a
-  >
-  <div class="center">
-    <h1>Casatorportalen</h1>
-  </div>
+<nav class="navbar">
+  <div class="container"></div>
+  <h2 class="title">Casatorportalen</h2>
 </nav>
