Try to fix 500 error

--- a/portalen/templates/portalen/header.html
+++ b/portalen/templates/portalen/header.html
@@ -16,7 +16,7 @@
   .container {
     /* Rectangle 3 */
 
-    background: url("/static/images/logo.png");
+    background: url("{% static 'images/logo.png' %}");
     background-size: 150% auto;
     position: absolute;
     width: 100.67px;
