--- a/portalen/templates/registration/login.html
+++ b/portalen/templates/registration/login.html
@@ -53,7 +53,7 @@
       <div class="row justify-content-center align-items-center" id="login-row">
         <div class="col-md-6" id="login-column">
           <div class="col-md-12" id="login-box">
-            <form action="" class="form" id="login-form" method="post">
+            <form action="" class="form" id="login-form" method="POST">
               {% csrf_token %}
               <pre>
 
@@ -88,8 +88,6 @@ Användarnamn och lösenord får du av din verksamhetschef.
                   type="password"
                 />
                 <br />
-
-                {{form.errors}}
 
                 <input
                   class="btn btn-info btn-md"
