--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -1,4 +1,9 @@
 {% extends 'portalen/base.html' %} {% load static %} {% block content %}
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="DesktopPortal.css">
+</head>
 <body>
   <div class="grid-container">
     <div class="btn-group dropright">
