--- a/portalen/templates/portalen/portalpage.html
+++ b/portalen/templates/portalen/portalpage.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="DesktopPortal.css">
+<link rel="stylesheet" href="{% static 'css/DesktopPortal.css' %}">
 </head>
 <body>
   <div class="grid-container">
