--- a/portalen/templates/portalen/header.html
+++ b/portalen/templates/portalen/header.html
@@ -1,81 +1,11 @@
 {% load static %}
 
-<style>
-  .navbar {
-    /* bg */
 
-    position: absolute;
-    width: 100%;
-    height: 80px;
-    left: 0px;
-
-    background: #ffffff;
-    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.05);
-  }
-
-  .container {
-    /* Rectangle 3 */
-
-    background: url("/static/images/logo.png");
-    background-size: 150% auto;
-    position: absolute;
-    width: 100.67px;
-    height: 99.29px;
-    left: 464px;
-    top: -25px;
-  }
-  .title {
-    /* Casatorportalen */
-    position: absolute;
-    width: 119.02px;
-    height: 19.38px;
-    left: 592px;
-    top: 27.91px;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 23px;
-    line-height: 18px;
-    color: #121212;
-  }
-  .logout-container {
-    /* Rectangle 11 */
-
-    position: absolute;
-    width: 184px;
-    height: 80px;
-    left: 1245px;
-    top: 0px;
-    background: #f7f7f7;
-  }
-  .logout-icon {
-    position: absolute;
-    width: 35px;
-    height: 30px;
-    left: 142.1px;
-    top: 25px;
-  }
-  .btn {
-    position: absolute;
-    width: 204.66px;
-    height: 83.38px;
-    left: -22px;
-    top: -1px;
-    font-family: Lato;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 66px;
-    color: #ae2718;
-  }
-  .logout-underscore {
-    position: absolute;
-    width: 75px;
-    height: 0px;
-    left: 45px;
-    top: 58px;
-    border: 1px solid #ae2718;
-  }
-</style>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="{% static 'css/DesktopHeader.css' %}">
+</head>
 
 <nav class="navbar">
   <div class="container"></div>
