--- a/portalen/templates/portalen/header.html
+++ b/portalen/templates/portalen/header.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="{% static 'css/DesktopHeader.css' %}">
 </head>
 
-<nav class="navbar">
+<nav class="navbar-portal">
   <div class="container"></div>
   <h2 class="title">Casatorportalen</h2>
   <div class="logout-container">
