--- a/portalen/templates/portalen/header.html
+++ b/portalen/templates/portalen/header.html
@@ -7,6 +7,7 @@
 </head>
 
 <nav class="navbar-portal">
+  <div class="header-wrapper">
   <div class="container"></div>
   <h2 class="title">Casatorportalen</h2>
   <div class="logout-container">
@@ -56,4 +57,5 @@
       />
     </svg>
   </div>
+</div>
 </nav>
