Fix responsiv epage

--- a/static/css/DesktopHeader.css
+++ b/static/css/DesktopHeader.css
@@ -12,18 +12,18 @@
   .container {
     background: url("/static/images/logo.png");
     background-size: 150% auto;
-    position: absolute;
+    position: relative;
     width: 100.67px;
     height: 99.29px;
-    left: 769px;
+    left: -470px;
     top: -25px;
   }
   .title {
-    position: absolute;
+    position: relative;
     width: 119.02px;
     height: 19.38px;
-    left: 881px;
-    top: 27.91px;
+    left: 75px;
+    top: -69.09px;
     font-style: normal;
     font-weight: 600;
     font-size: 23px;
@@ -31,11 +31,11 @@
     color: #121212;
   }
   .logout-container {
-    position: absolute;
+    position: relative;
     width: 184px;
     height: 80px;
-    left: 1532px;
-    top: 0px;
+    left: 726px;
+    top: -126px;
     background: #f7f7f7;
   }
   .logout-icon {
