--- a/static/css/DesktopPortal.css
+++ b/static/css/DesktopPortal.css
@@ -1,3 +1,4 @@
+@media(min-width: 1440px){
 #grid-item {
     width: 250px;
     height: 150px;
@@ -101,3 +102,4 @@
     top: 10px;
     height: 30px;
   }
+}
