--- a/static/css/DesktopHeader.css
+++ b/static/css/DesktopHeader.css
@@ -1,3 +1,4 @@
+@media(min-width: 1440px){
 .navbar-portal {
     width: 100%;
     height: 80px;
@@ -5,8 +6,8 @@
     box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.05);
   }
   .header-wrapper{
-    width: 940px;
-    height: 88px;
+    width: 1440px;
+    height: 80px;
     margin: 0px auto;
   }
   .container {
@@ -22,7 +23,7 @@
     position: relative;
     width: 119.02px;
     height: 19.38px;
-    left: 75px;
+    left: 329px;
     top: -69.09px;
     font-style: normal;
     font-weight: 600;
@@ -34,7 +35,7 @@
     position: relative;
     width: 184px;
     height: 80px;
-    left: 726px;
+    left: 974px;
     top: -126px;
     background: #f7f7f7;
   }
@@ -66,3 +67,4 @@
     top: 58px;
     border: 1px solid #ae2718;
   }
+}
