--- a/static/css/DesktopHeader.css
+++ b/static/css/DesktopHeader.css
@@ -137,4 +137,74 @@
       top: 58px;
       border: 1px solid #ae2718;
     }
-  }
+}
+
+@media(min-width: 375px){
+    .navbar-portal {
+        width: 100%;
+        height: 80px;
+        background: #ffffff;
+        box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.05);
+      }
+      .header-wrapper{
+        width: 834px;
+        height: 80px;
+        margin: 0px auto;
+      }
+      .container {
+        background: url("/static/images/logo.png");
+        background-size: 150% auto;
+        position: relative;
+        width: 100.67px;
+        height: 99.29px;
+        left: -382px;
+        top: -25px;
+      }
+      .title {
+        position: relative;
+        width: 119.02px;
+        height: 19.38px;
+        left: 120px;
+        top: -69.09px;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 23px;
+        line-height: 18px;
+        color: #121212;
+      }
+      .logout-container {
+        position: relative;
+        width: 184px;
+        height: 80px;
+        left: 649px;
+        top: -126px;
+      }
+      .logout-icon {
+        position: absolute;
+        width: 35px;
+        height: 30px;
+        left: 142.1px;
+        top: 25px;
+      }
+      .btn {
+        position: absolute;
+        width: 204.66px;
+        height: 83.38px;
+        left: -22px;
+        top: -1px;
+        font-family: Lato;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 66px;
+        color: #ae2718;
+      }
+      .logout-underscore {
+        position: absolute;
+        width: 75px;
+        height: 0px;
+        left: 45px;
+        top: 58px;
+        border: 1px solid #ae2718;
+      }
+}
