--- a/static/css/DesktopPortal.css
+++ b/static/css/DesktopPortal.css
@@ -1,4 +1,4 @@
-@media (min-width: 375px) {
+@media (min-width: 375px) and (orientation: portrait) {
   #grid-item {
     width: 230px;
     height: 140px;
