--- a/static/css/DesktopHeader.css
+++ b/static/css/DesktopHeader.css
@@ -1,4 +1,4 @@
-@media (min-width: 375px) and (orientation: portrait) {
+@media only screen and (min-width: 375px) {
   .navbar-portal {
     width: 100%;
     height: 80px;
