--- a/static/css/DesktopPortal.css
+++ b/static/css/DesktopPortal.css
@@ -1,4 +1,4 @@
-@media (min-width: 375px) and (orientation: portrait) {
+@media only screen and (min-width: 375px){
   #grid-item {
     width: 230px;
     height: 140px;
