--- a/static/css/DesktopPortal.css
+++ b/static/css/DesktopPortal.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 375px){
+@media only screen and (min-width: 375px) {
   #grid-item {
     width: 150px;
     height: 140px;
@@ -96,8 +96,8 @@
     left: 53px;
     top: 10px;
     height: 30px;
+  }
 }
-
 
 @media (min-width: 834px) {
   #grid-item {
@@ -199,7 +199,6 @@
     height: 30px;
   }
 }
-
 
 @media (min-width: 1440px) {
   #grid-item {
